--- a/public/views/register.html
+++ b/public/views/register.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <h1>Log In</h1>
+    <h1>Register</h1>
       <form action="register" method="post">
      <div class="">
        <label for="username">Username: </label>
